<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="about" translatable="false">About LaunchEnr&#160;</string>
    <string name="me" translatable="false">&#169;2017 by Enrico D\'Ortenzio</string>
    <string name="credits" translatable="false">Credits:</string>
    <string name="materialIcons" translatable="false">\u2022 https://materialdesignicons.com</string>
    <string name="evervol" translatable="false">\u2022 https://github.com/Evervolv</string>
    <string name="aospa" translatable="false">\u2022 http://get.aospa.co</string>
    <string name="stack" translatable="false">\u2022 https://stackoverflow.com</string>
    <string name="aosp" translatable="false">\u2022 https://android.googlesource.com</string>
    <string name="git" translatable="false">GIT: https://github.com/enricocid/LaunchEnr</string>
    <string name="edit_app">Edit</string>
    <string name="reset_icon" translatable="false">Reset</string>
    <string name="all_icons">Other icons</string>
    <string name="similar_icons">Similar icons</string>
    <string name="icon_label">Label</string>
    <string name="loading">Loading icons&#8230;</string>
    <string name="dots" translatable="false">&#8230;</string>
    <string name="choose_icon">Choose an icon</string>
    <string name="none">None</string>
    <string name="default_round">Default round</string>
    <string name="enr_round">Colorful round</string>
    <string name="icon_style">Icons style</string>
    <string name="icon_chooser">Icon chooser</string>
    <string name="icon_search">Search for icons</string>
    <string name="hide">Hide</string>
    <string name="restoreHiddenAppsPref">Restore hidden apps</string>
    <string name="hiddenApps">Hidden apps:&#160;</string>
    <string name="hiddenAppsSum">Click to restore hidden apps</string>
    <string name="noHiddenApps">No apps where hidden</string>
    <string name="hidden_title">Hidden apps</string>
    <string name="hidden_message">Select the apps You want to make visible again. Click OK to confirm</string>
    <string name="ui">UI things</string>
    <string name="others">Other stuff</string>
    <string name="no_search_provider">No search provider where found</string>
    <string name="pinch">Pinch to overview</string>
    <string name="randomIcon">Change icons</string>
    <string name="hint">Hint:</string>
    <string name="randomIconHint">To change icons on the fly enable the \"change icons\" tile in Quick Settings!</string>
    <string name="icons">Icons</string>
    <string name="dtToLock">Double tap to lock</string>
    <string name="boardTitle">Change board title</string>
    <string name="colored_folders">Colored folders</string>
    <string name="colored_folders_sum">The theme of the folders will follow the theme accent</string>
    <string name="round_icons">Round icons</string>
    <string name="round_icons_sum">Use round icons when available</string>
    <string name="doSomething">What to do?</string>
    <string name="copied">Note copied to clipboard</string>
    <string name="notificationBadges">Notification badges (&#946;)</string>
    <string name="enableNotificationBadges">Enable notification badges</string>
    <string name="enableNotificationBadgesSum">&#946; = so don\'t act like a monkey if something weird happens:P</string>
    <string name="badgePosition">Choose badge position</string>
    <string name="badgeTopRight">Top right</string>
    <string name="badgeTopLeft">Top left</string>
    <string name="badgeBottomRight">Bottom right</string>
    <string name="badgeBottomLeft">Bottom left</string>
    <string name="badgeShadow">Enable badge shadow</string>
    <string name="badgeShadowSum">The badge will show a shadow to enhance visibility</string>
    <string name="prefHotseat">Dock color</string>
    <string name="hotseatDefault">Default</string>
    <string name="hotseatTransparent">Transparent</string>
    <string name="hotseatExtracted">Wallpaper extracted</string>
    <string name="hotseatAccent">Theme accent</string>
    <string name="board" translatable="false">Board</string>
    <string name="uSure">Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="notes">Notes</string>
    <string name="addNote">Add note</string>
    <string name="add">Add</string>
    <string name="noteTitle">Title goes here&#8230;</string>
    <string name="noteBody">Body goes here&#8230;</string>
    <string name="notePriority">Priority</string>
    <string name="contacts">Frequent contacts</string>
    <string name="chooseNumber">Choose number</string>
    <string name="shareWith">Share with&#8230;</string>
    <string name="share">Share</string>
    <string name="contactsPermissionTitle">Reading contacts&#8230;</string>
    <string name="contactsPermissionMessage">To display frequent contacts, LaunchEnr needs \"read contacts\" permission to be granted</string>
    <string name="phonePermissionTitle">Calling&#8230;</string>
    <string name="phonePermissionMessage">To perform calls, LaunchEnr needs \"call phone\" permission to be granted</string>
    <string name="privacyPolicy" translatable="false">Privacy policy: https://git.io/v50Lh</string>
    <string name="phonePermissionDenied">Call phone permission denied. No access no call&#8230;</string>
    <string name="phonePermissionGranted">Call phone permission granted. It\'s time to make some call&#8230;</string>
    <string name="contactsPermissionDenied">Read contacts permission denied. Shelf will be disabled&#8230;</string>
    <string name="contactsPermissionGranted">Read contacts permission granted. Enabling shelf&#8230;</string>
    <string name="notificationAccessPermission">Accessing notifications&#8230;</string>
    <string name="notificationAccessPermissionRatio">To get notification badges working, LaunchEnr needs access to listen Your notifications</string>
    <string name="adminAccess">Locking device&#8230;</string>
    <string name="adminPermissionRatio">To get double tap working, LaunchEnr needs to be a device administrator</string>
    <string name="problem">Still no permissions. Please move the app to internal memory!</string>
    <string name="problemNumbers">No numbers where found. Stopping&#8230;</string>
    <string name="solid">Material color</string>
    <string name="wallpaper_type_dialog_title">Set wallpaper</string>
    <string name="wallpaper_type_both">Home screen and lock screen</string>
    <string name="wallpaper_type_system">Home screen</string>
    <string name="wallpaper_type_lock">Lock screen</string>
    <string name="light_status_bar">Dynamic light status bar</string>
    <string name="light_status_bar_sum">When enabled the status bar may show dark icons based on the top of the wallpaper</string>
    <string name="light_bars">Dynamic light system bar</string>
    <string name="light_bars_sum">When enabled the system bars may show dark icons based on the top of the wallpaper</string>
    <string name="dark_theme">Enable dark theme</string>
    <string name="pref_theme_title">Accent color</string>
    <string name="themesum">Change the Launcher accent color</string>
    <string name="pref_theme_list" translatable="false">pref_theme_list</string>
    <string name="default_theme">Default</string>
    <string name="red">Red</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="deepPurple">Deep purple</string>
    <string name="indigo">Indigo</string>
    <string name="blue">Blue</string>
    <string name="lightBlue">Light blue</string>
    <string name="cyan">Cyan</string>
    <string name="teal">Teal</string>
    <string name="green">Green</string>
    <string name="amber">Amber</string>
    <string name="orange">Orange</string>
    <string name="deepOrange">Deep orange</string>
    <string name="brown">Brown</string>
    <string name="blueGrey">Blue grey</string>
    <string name="storage_button_text">Storage</string>
    <string name="device_settings_text">Device settings</string>
    <string name="fling_down">Fling down to &#8230;?</string>
    <string name="fling_down_disabled">Nothing</string>
    <string name="fling_down_search">Search</string>
    <string name="fling_down_expand_sb">Status bar</string>
    <string name="fling_down_board">@string/board</string>
    <string name="app_name" translatable="false">LaunchEnr</string>
    <string name="folder_name"></string>
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="shortcut_not_available">Shortcut isn\'t available</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="long_accessible_way_to_add">Double-tap &amp; hold to pick up a widget or use custom actions.</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="widget_accessible_dims_format">%1$d wide by %2$d high</string>
    <string name="all_apps_search_bar_hint">Search Apps</string>
    <string name="all_apps_loading_message">Loading Apps&#8230;</string>
    <string name="all_apps_no_search_results">No Apps found matching \"<xliff:g example="Android" id="query">%1$s</xliff:g>\"</string>
    <string name="all_apps_search_market_message">Search for more apps</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="remove_drop_target_label">Remove</string>
    <string name="uninstall_drop_target_label">Uninstall</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="msg_no_phone_permission"><xliff:g example="Launcher3" id="app_name">%1$s</xliff:g> is not allowed to make phone calls</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="gadget_setup_text">Setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="disabled_app_label">Disabled <xliff:g example="Messenger" id="app_name">%1$s</xliff:g></string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="workspace_new_page">New home screen page</string>
    <string name="folder_opened">Folder opened, <xliff:g example="5" id="width">%1$d</xliff:g> by <xliff:g example="3" id="height">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Tap to close folder</string>
    <string name="widget_button_text">Widgets</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="settings_button_text">Settings</string>
    <string name="show_predictive_apps_title">Predictive apps</string>
    <string name="icon_pack">Icon pack</string>
    <string name="icon_pack_summary">Select an icon pack</string>
</resources>