<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/ui" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_lightOrDark"
        android:title="@string/dark_theme" />

    <com.enrico.launcher3.customsettings.ThemePreference
        android:defaultValue="0"
        android:key="pref_chooseTheme"
        android:persistent="true"
        android:summary="?attr/colorAccent"
        android:title="@string/pref_theme_title" />

    <ListPreference
        android:defaultValue="24"
        android:entries="@array/hotseat_color_options"
        android:entryValues="@array/hotseat_color_values"
        android:key="pref_hotseatColor"
        android:summary="%s"
        android:title="@string/prefHotseat" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_coloredFolders"
        android:summary="@string/colored_folders_sum"
        android:title="@string/colored_folders" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_lightBars"
        android:summary="@string/light_status_bar_sum"
        android:title="@string/light_status_bar" />
    <PreferenceCategory android:title="@string/icons" />

    <com.enrico.launcher3.icons.IconPackPreference
        android:key="pref_iconPackPackage"
        android:persistent="true"
        android:summary="@string/icon_pack_summary"
        android:title="@string/icon_pack" />

    <ListPreference
        android:defaultValue="28"
        android:key="pref_roundIcons"
        android:entries="@array/icon_styles_options"
        android:entryValues="@array/icon_styles_values"
        android:title="@string/icon_style"
        android:summary="%s" />

    <Preference
        android:enabled="false"
        android:summary="@string/randomIconHint"
        android:title="@string/hint" />

    <PreferenceCategory android:title="@string/notificationBadges" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_notificationBadges"
        android:title="@string/enableNotificationBadges"
        android:summary="@string/enableNotificationBadgesSum"/>

    <ListPreference
        android:defaultValue="20"
        android:entries="@array/badge_position_options"
        android:entryValues="@array/badge_position_values"
        android:key="pref_badgePosition"
        android:summary="%s"
        android:title="@string/badgePosition" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_badgeShadow"
        android:summary="@string/badgeShadowSum"
        android:title="@string/badgeShadow" />

    <PreferenceCategory android:title="@string/others" />

    <ListPreference
        android:defaultValue="16"
        android:entries="@array/fling_options"
        android:entryValues="@array/pref_fling_values"
        android:key="pref_flingDown"
        android:summary="%s"
        android:title="@string/fling_down" />

    <EditTextPreference
        android:key="pref_boardTitle"
        android:title="@string/boardTitle" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_dtLock"
        android:title="@string/dtToLock" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_pinchToOverview"
        android:title="@string/pinch" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_showPredictiveApps"
        android:title="@string/show_predictive_apps_title" />

    <Preference
        android:key="hidden-app"
        android:title="@string/hide_app"
        android:summary="@string/hide_app_sum"/>

</PreferenceScreen>
