<?xml version="1.0" encoding="utf-8"?>

<!-- This is the layout for the about dialog -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher_home" />

        <!-- Title -->
        <TextView
            android:layout_toEndOf="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="6dp"
            android:gravity="center_vertical"
            android:text="@string/me"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:autoLink="web"
        android:textColorLink="?attr/themeText"
        android:text="@string/git"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:text="@string/credits"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:autoLink="web"
        android:text="@string/materialIcons"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:autoLink="web"
        android:text="@string/aosp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:autoLink="web"
        android:text="@string/evervol"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:autoLink="web"
        android:text="@string/aospa"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:autoLink="web"
        android:text="@string/stack"
        android:textSize="16sp" />
</LinearLayout>