<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|bottom"
    android:gravity="top"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/wallpaper_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="2dp"
        android:drawableTop="@drawable/ic_image"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/wallpaper_button_text"
        android:textAllCaps="true"
        android:textColor="@color/wallpaper_button_text_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/widget_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="2dp"
        android:drawableTop="@drawable/ic_widgets"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/widget_button_text"
        android:textAllCaps="true"
        android:textColor="@color/widget_button_text_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/storage_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="2dp"
        android:drawableTop="@drawable/ic_micro_sd"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/storage_button_text"
        android:textAllCaps="true"
        android:textColor="@color/widget_button_text_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/settings_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="2dp"
        android:drawableTop="@drawable/ic_settings"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/settings_button_text"
        android:textAllCaps="true"
        android:textColor="@color/settings_button_text_color"
        android:textSize="12sp" />

</LinearLayout>
