<?xml version="1.0" encoding="utf-8"?>

<!-- This is the layout for the add notes dialog -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="20dp">

    <!-- Title -->
    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:hint="@string/noteTitle"
        android:textSize="16sp"
        tools:ignore="UnusedAttribute" />

    <!-- Note -->
    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:hint="@string/noteBody"
        android:textSize="16sp"
        tools:ignore="UnusedAttribute" />

    <!-- Priority -->
    <TextView
        android:id="@+id/priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/notePriority"
        android:textSize="14sp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/priorities_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>